welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: not found: value prendbiscuit
prendbiscuit()
^Balin:8: error: not found: value estsurbiscuit
while (!estsurbiscuit) {
        ^Balin:18: error: not found: value prendbiscuit
	prendbiscuit()
        ^Balin:19: error: not found: value estsurbiscuit
	while (!estsurbiscuit) {
                ^